<resources>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login">Login or register</string>
    <string name="action_login_short">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_logout_short">Logout</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_login">Invalid Login</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>

    <string name="GEOLOCATION">Geolocation</string>
    <string name="UPLOAD">Upload</string>
    <string name="DOWNLOAD">Download</string>
    <string name="TEST">Test</string>
    <string name="SYNC">Sync</string>
    <string name="addEditPerson">Person</string>
    <string name="addEditBooking">Direct Booking</string>


    <string name="searchTitle">Search</string>
    <string name="loginTitle">Login/Logout</string>
    <string name="createPersonTitle">Create Person</string>
    <string name="createTitle">Create</string>
    <string name="recentTitle">Recent</string>
    <string name="actionsTitle">Actions</string>
    <string name="editTitle">Edit Assessment</string>
    <string name="adminTitle">Administration</string>
    <string name="debugTitle">Debug</string>
    <string name="addEditPersonTitle">Person</string>
    <string name="addPersonTitle">Add Person</string>
    <string name="editPersonTitle">Edit Person</string>
    <string name="addEditBookingTitle">Direct Booking</string>
    <string name="addBookingTitle">Add Booking</string>
    <string name="editBookingTitle">Edit Booking</string>


    <string name="app_name">VMMC</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="edit_fragment">Edit Fragment</string>
    <string name="create_fragment">Create Fragment</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="geoLocation">GeoLocation</string>
    <string name="title">Person Details</string>

    <string name="name">Name </string>
    <string name="search">Search </string>
    <string name="name_nationalId_facility">Name, National Id, Facility </string>
    <string name="first_name">First Name </string>
    <string name="last_name">Last Name </string>
    <string name="national_id">National ID </string>
    <string name="address">Address </string>
    <string name="phone">Phone Number </string>
    <string name="dob">Date of Birth </string>
    <string name="gender">Gender </string>
    <string name="latitude">Latitude </string>
    <string name="longitude">Longitude </string>

    <string name="client_id">ClientID </string>

    <string name="btn_label_edit">Edit </string>
    <string name="btn_label_add">Add </string>
    <string name="btn_label_save">Save </string>
    <string name="btn_label_update">Update </string>
    <string name="btn_label_go">go </string>

    <string name="facility_id">Enter Facility Id: </string>
    <string name="facility_name">Facility Name </string>
    <string name="assessment_name">Assessment Type </string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="view">View</string>
    <string name="view_person">ViewP</string>
    <string name="view_assessments">ViewA</string>
    <string name="view_assessments_questions">ViewQ</string>
    <string name="show_info">Show Info</string>
    <string name="download">Download</string>
    <string name="download_complete">Download Complete</string>
    <string name="sync_complete">Sync Initiated</string>

    <string name="upload">Upload</string>
    <string name="error">There was an error</string>
    <string name="test">Test</string>
    <string name="projected_date">Booking Date</string>
    <string name="actual_date">Date of MC</string>
    <string name="btn_label_display">Display</string>
    <string name="displayTitle">Display</string>
    <string name="status">Status</string>
    <string name="addEditClientTitle">Client</string>
    <string name="addEditClient">Client</string>
    <string name="editClientTitle">Edit Client</string>
    <string name="location">Location</string>
    <string name="institution">Institution</string>
    <string name="sync_reminder">Tab must have been SYNC\'d</string>
    <string name="addEditFacilitatorTitle">Community Recruiter</string>
    <string name="editFacilitatorTitle">Edit Community Recruiter</string>
    <string name="facilitator_type">Type</string>
    <string name="note">Note</string>
    <string name="facilitator">Community Recruiter</string>
    <string name="person">Person</string>
    <string name="interaction_type">Type</string>
    <string name="followup_date">Follow-up Date</string>
    <string name="interaction_date">Date</string>
    <string name="addEditInteractionTitle">Interaction</string>
    <string name="addEditInteraction">Interaction</string>
    <string name="editInteractionTitle">Edit interaction</string>
    <string name="editInteraction">Edit Interaction</string>
    <string name="displayBookingTitle">Display Bookings</string>
    <string name="displayPersonTitle">Display Persons</string>
    <string name="displayClientTitle">Display Clients</string>
    <string name="displayFacilitatorTitle">Display Community Recruiters</string>
    <string name="displayInteractionTitle">Display Interactions</string>
    <string name="addEditGroupActivity">Group Activity</string>
    <string name="addEditGroupActivityTitle">Group Activity</string>
    <string name="editGroupActivityTitle">Edit Group Activity</string>
    <string name="activity_date">Activity Date</string>
    <string name="displayGroupActivityTitle">Display Group Activities</string>
    <string name="group_type">Group Type</string>
    <string name="males">Males</string>
    <string name="females">Females</string>
    <string name="messages">Messages</string>
    <string name="GroupActivity">Group Activity</string>
    <string name="btn_label_client">Client</string>
    <string name="btn_label_person">Person</string>
    <string name="btn_label_booking">Booking</string>
    <string name="Username">Username</string>
    <string name="Region">Region</string>
    <string name="Usergroup">User Group</string>
    <string name="addEditUserTitle">User</string>
    <string name="editUserTitle">Edit User</string>
    <string name="displayUserTitle">Display Users</string>
    <string name="email">Email</string>
    <string name="is_blocked">Is Blocked</string>
    <string name="Oshana">Oshana</string>
    <string name="Zambezi">Zambezi</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="displayPendingFollowup">Display Pending/Followup</string>
    <string name="facilitator_short">Recruiter</string>
    <string name="addEditPendingFollowup">Pending/Followup</string>
    <string name="constituency">Constituency</string>
    <string name="homeTitle">Home</string>
    <string name="homeVersion">Version:</string>

    <string name="groupActivityMessage1">Role of VMMC in public health</string>
    <string name="groupActivityMessage2">Role of VMMC in HIV prevention</string>
    <string name="groupActivityMessage3">Limitations of VMMC</string>
    <string name="groupActivityMessage4">Who can get circumcised (target population)</string>
    <string name="groupActivityMessage5">Surgery procedure (pre and post)</string>
    <string name="consent">Consent</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="procedureType">Procedure</string>
    <string name="followup">Followup</string>
    <string name="contact">Contact</string>
    <string name="altContact">Alt Contact</string>
    <string name="IllegalEntry">Illegal Entry</string>
    <string name="restoreTitle">Restore</string>
    <string name="Karas">//Karas</string>
    <string name="auditTitle">Audit</string>
    <string name="authentication_failure">Authentication Failed</string>
    <string name="failed_sync_jwt">Sync Failed. Token is invalid, try sync again.</string>


</resources>
