<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.itech.vmmc.AddEditPersonFragment">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/vmmc50" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_size_small"
        android:text="@string/name"
        android:id="@+id/textViewName"
        android:paddingTop="128dp"
        android:layout_below="@+id/imageViewVMMC" />

    <org.itech.vmmc.ClearableAutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:id="@+id/name"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/textViewName"
        android:layout_below="@+id/imageViewVMMC"
        android:paddingTop="128dp"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_size_small"
        android:text="@string/national_id"
        android:id="@+id/textViewNationalId"
        android:paddingTop="12dp"
        android:layout_below="@+id/textViewName" />

    <org.itech.vmmc.ClearableAutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:id="@+id/national_id"

        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/textViewNationalId"
        android:layout_below="@+id/textViewName"
        android:maxLines="1" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:textSize="@dimen/font_size_small"
    android:text="@string/phone"
    android:id="@+id/textViewPhone"
    android:paddingTop="12dp"
    android:layout_below="@+id/textViewNationalId" />

    <org.itech.vmmc.ClearableAutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:id="@+id/phone_number"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/textViewPhone"
        android:layout_below="@+id/textViewNationalId"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_size_small"
        android:text="@string/projected_date"
        android:id="@+id/textViewProjectedDate"
        android:paddingTop="12dp"
        android:layout_below="@+id/textViewPhone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:id="@+id/projected_date"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/textViewPhone"
        android:layout_below="@+id/textViewPhone"
        android:maxLines="1" />





<!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:text="@string/btn_label_add"
        android:id="@+id/btnAddPerson"
        android:paddingTop="12dp"
        android:layout_below="@+id/phone_number"
        android:layout_alignEnd="@+id/phone_number"
        android:layout_marginTop="32dp" />
-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:text="@string/btn_label_display"
        android:id="@+id/btnDisplayBooking"
        android:paddingTop="12dp"
        android:layout_alignStart="@+id/textViewProjectedDate"
        android:layout_below="@+id/projected_date"
        android:layout_marginTop="32dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:text="@string/btn_label_go"
        android:id="@+id/btnEditBooking"
        android:paddingTop="12dp"
        android:layout_alignEnd="@+id/projected_date"
        android:layout_below="@+id/projected_date"
        android:layout_marginTop="32dp" />


</RelativeLayout>
