<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.itech.vmmc.AddEditPersonFragment">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/vmmc50" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_size_small"
        android:text="@string/name"
        android:id="@+id/textViewName"
        android:paddingTop="128dp"
        android:layout_below="@+id/imageViewVMMC" />

    <org.itech.vmmc.ClearableAutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:id="@+id/name"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/textViewName"
        android:layout_below="@+id/imageViewVMMC"
        android:paddingTop="128dp"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_size_small"
        android:text="@string/activity_date"
        android:id="@+id/textViewActivityDate"
        android:paddingTop="12dp"
        android:layout_below="@+id/textViewName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:id="@+id/activity_date"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/textViewName"
        android:layout_below="@+id/textViewName"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_size_small"
        android:text="@string/location"
        android:id="@+id/textViewLocation"
        android:paddingTop="12dp"
        android:layout_below="@+id/textViewActivityDate" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vmmclocation"
        android:textSize="@dimen/font_size_small"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/textViewLocation"
        android:paddingTop="12dp"
        android:layout_below="@+id/textViewActivityDate" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_size_small"
        android:text="@string/group_type"
        android:id="@+id/textViewGroupType"
        android:paddingTop="12dp"
        android:layout_below="@+id/textViewLocation" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/group_type"
        android:textSize="@dimen/font_size_small"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/textViewGroupType"
        android:paddingTop="12dp"
        android:layout_below="@+id/textViewLocation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_size_small"
        android:text="@string/males"
        android:id="@+id/textViewMales"
        android:paddingTop="12dp"
        android:layout_below="@+id/textViewGroupType" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:id="@+id/males"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/textViewGroupType"
        android:layout_below="@+id/textViewGroupType"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_size_small"
        android:text="@string/females"
        android:id="@+id/textViewFemales"
        android:paddingTop="12dp"
        android:layout_below="@+id/textViewMales" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:id="@+id/females"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/textViewMales"
        android:layout_below="@+id/textViewMales"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_size_small"
        android:text="@string/messages"
        android:id="@+id/textViewMessages"
        android:paddingTop="12dp"
        android:layout_below="@+id/textViewFemales" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:id="@+id/messages"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/textViewFemales"
        android:layout_below="@+id/textViewFemales"
        android:maxLines="1" />




    <!--
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_small"
            android:text="@string/btn_label_add"
            android:id="@+id/btnAddPerson"
            android:paddingTop="12dp"
            android:layout_below="@+id/phone_number"
            android:layout_alignEnd="@+id/phone_number"
            android:layout_marginTop="32dp" />
    -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:text="@string/btn_label_update"
        android:id="@+id/btnUpdate"
        android:layout_below="@+id/textViewMessages"
        android:layout_alignEnd="@+id/messages"
        android:layout_marginTop="48dp" />


</RelativeLayout>
