<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.itech.vmmc.CreateFragment">

    <!-- TODO: Update blank fragment layout -->
    <!-- Spinner Element
       <TextView
           android:layout_width="227dp"
           android:layout_height="69dp"
           android:layout_marginTop="10dip"
           android:text="Category:"
           android:layout_marginBottom="5dp" />


       <Spinner
           android:id="@+id/test_spinner"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:prompt="@string/spinner_title"
           android:layout_alignParentTop="true"
           android:layout_alignStart="@+id/textView0" />
-->

    <ImageView
        android:id="@+id/imageViewVMMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/itech50" />

     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_size_small"
        android:text="@string/first_name"
        android:id="@+id/textViewFirstName"
        android:paddingTop="128dp"
        android:layout_below="@+id/imageViewVMMC"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:id="@+id/first_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/textViewFirstName"
        android:paddingTop="128dp"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_size_small"
        android:text="@string/last_name"
        android:id="@+id/textViewLastName"
        android:paddingTop="12dp"
        android:layout_below="@+id/textViewFirstName" />

   <EditText
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/font_size_small"
       android:id="@+id/last_name"
       android:layout_marginLeft="200dp"
       android:layout_marginRight="50dp"
       android:layout_alignParentEnd="true"
       android:layout_alignParentStart="true"
       android:layout_toEndOf="@+id/textViewLastName"
       android:layout_below="@+id/textViewFirstName"
       android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_size_small"
        android:text="@string/national_id"
        android:id="@+id/textViewNationalId"
        android:paddingTop="12dp"
        android:visibility="invisible"
        android:layout_below="@+id/textViewLastName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:id="@+id/national_id"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:layout_toEndOf="@+id/textViewNationalId"
        android:layout_below="@+id/textViewLastName"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_size_small"
        android:text="@string/phone"
        android:id="@+id/textViewPhone"
        android:paddingTop="12dp"
        android:layout_below="@+id/textViewNationalId" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:id="@+id/phone_number"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/textViewPhone"
        android:layout_below="@+id/textViewNationalId"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_size_small"
        android:text="@string/status"
        android:id="@+id/textViewStatus"
        android:paddingTop="12dp"
        android:layout_below="@+id/textViewPhone" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/status"
        android:textSize="@dimen/font_size_small"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/textViewStatus"
        android:paddingTop="12dp"
        android:layout_below="@+id/textViewPhone" />


  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:textSize="@dimen/font_size_small"
      android:text="@string/constituency"
      android:id="@+id/textViewLocation"
      android:paddingTop="12dp"
      android:layout_below="@+id/textViewStatus" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vmmclocation"
        android:textSize="@dimen/font_size_small"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/textViewLocation"
        android:paddingTop="12dp"
        android:layout_below="@+id/textViewStatus" />



  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:textSize="@dimen/font_size_small"
      android:text="@string/institution"
      android:id="@+id/textViewInstitution"
      android:paddingTop="12dp"
      android:layout_below="@+id/textViewLocation" />

    <!--
       <Spinner
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/institution"
           android:textSize="@dimen/font_size_small"
           android:layout_marginLeft="200dp"
           android:layout_marginRight="50dp"
           android:layout_alignParentEnd="true"
           android:layout_alignParentStart="true"
           android:layout_toEndOf="@+id/textViewInstitution"
           android:paddingTop="12dp"
           android:layout_below="@+id/textViewLocation" />
           -->

       <org.itech.vmmc.ClearableAutoCompleteTextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/font_size_small"
           android:id="@+id/institution"
           android:layout_marginLeft="200dp"
           android:layout_marginRight="50dp"
           android:layout_alignParentEnd="true"
           android:layout_alignParentStart="true"
           android:layout_toEndOf="@+id/textViewInstitution"
           android:layout_below="@+id/textViewLocation"
           android:paddingTop="12dp"
           android:maxLines="1" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="10dp"
           android:textSize="@dimen/font_size_small"
           android:text="@string/GroupActivity"
           android:id="@+id/textViewGroupActivity"
           android:paddingTop="12dp"
           android:layout_below="@+id/textViewInstitution" />

       <Spinner
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/group_activity"
           android:textSize="@dimen/font_size_small"
           android:layout_marginLeft="200dp"
           android:layout_marginRight="50dp"
           android:layout_alignParentEnd="true"
           android:layout_alignParentStart="true"
           android:layout_toEndOf="@+id/textViewGroupActivity"
           android:paddingTop="12dp"
           android:layout_below="@+id/textViewInstitution" />




       <!--
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/assessment_name"
                      android:id="@+id/textView4"
                      android:paddingTop="12dp"
                      android:layout_below="@+id/facility"
                      android:layout_alignStart="@+id/assessment_type" />

                  <Spinner
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/assessment_type"

                      android:layout_below="@+id/textView4"
                      android:layout_marginLeft="128dp"
                      android:layout_marginRight="128dp"
                      android:layout_alignParentEnd="true"
                      android:layout_alignParentStart="true"/>

                  -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:text="@string/btn_label_booking"
        android:id="@+id/btnBooking"
        android:paddingTop="12dp"
        android:layout_alignStart="@+id/textViewGroupActivity"
        android:layout_below="@+id/textViewGroupActivity"
        android:layout_marginTop="32dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_small"
        android:text="@string/btn_label_person"
        android:id="@+id/btnPerson"
        android:paddingTop="12dp"
        android:layout_alignStart="@+id/textViewGroupActivity"
        android:layout_below="@+id/btnBooking"
        android:layout_marginTop="16dp" />

              <Button
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/font_size_small"
                  android:text="@string/btn_label_update"
                  android:id="@+id/btnUpdate"
                  android:layout_below="@+id/textViewGroupActivity"
                  android:layout_alignEnd="@+id/group_activity"
                  android:layout_marginTop="32dp" />


</RelativeLayout>
